lattices/tests/compile-fail/non_lattice_field.rs
use lattices::Lattice;

#[derive(Lattice)]
struct NotALattice {
    not_a_lattice_field: String,
}

fn main() {}
