lattices/tests/compile-fail/non_lattice_field.stderr
error[E0277]: the trait bound `String: Merge<String>` is not satisfied
 --> tests/compile-fail/non_lattice_field.rs:3:10
  |
3 | #[derive(Lattice)]
  |          ^^^^^^^ the trait `Merge<String>` is not implemented for `String`
  |
  = help: the following other types implement trait `Merge<Other>`:
            <() as Merge<()>>
            <Conflict<T> as Merge<Conflict<O>>>
            <DomPair<KeySelf, ValSelf> as Merge<DomPair<KeyOther, ValOther>>>
            <MapUnion<MapSelf> as Merge<MapUnion<MapOther>>>
            <MapUnionWithTombstones<MapSelf, TombstoneSetSelf> as Merge<MapUnionWithTombstones<MapOther, TombstoneSetOther>>>
            <Max<T> as Merge<Max<T>>>
            <Min<T> as Merge<Min<T>>>
            <NotALattice as Merge<NotALattice>>
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `Lattice` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  |
1 + #![feature(trivial_bounds)]
  |

error[E0277]: the trait bound `String: IsBot` is not satisfied
 --> tests/compile-fail/non_lattice_field.rs:3:10
  |
3 | #[derive(Lattice)]
  |          ^^^^^^^ the trait `IsBot` is not implemented for `String`
  |
  = help: the following other types implement trait `IsBot`:
            ()
            Conflict<T>
            DomPair<Key, Val>
            MapUnion<Map>
            MapUnionWithTombstones<Map, TombstoneSet>
            Max<()>
            Max<bool>
            Max<char>
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `Lattice` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  |
1 + #![feature(trivial_bounds)]
  |

error[E0277]: the trait bound `String: IsTop` is not satisfied
 --> tests/compile-fail/non_lattice_field.rs:3:10
  |
3 | #[derive(Lattice)]
  |          ^^^^^^^ the trait `IsTop` is not implemented for `String`
  |
  = help: the following other types implement trait `IsTop`:
            ()
            Conflict<T>
            DomPair<Key, Val>
            MapUnion<Map>
            MapUnionWithTombstones<Map, TombstoneSet>
            Max<()>
            Max<bool>
            Max<char>
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `Lattice` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  |
1 + #![feature(trivial_bounds)]
  |

error[E0277]: the trait bound `String: LatticeFrom<String>` is not satisfied
 --> tests/compile-fail/non_lattice_field.rs:3:10
  |
3 | #[derive(Lattice)]
  |          ^^^^^^^ the trait `LatticeFrom<String>` is not implemented for `String`
  |
  = help: the following other types implement trait `LatticeFrom<Other>`:
            <() as LatticeFrom<()>>
            <Conflict<T> as LatticeFrom<Conflict<T>>>
            <DomPair<KeySelf, ValSelf> as LatticeFrom<DomPair<KeyOther, ValOther>>>
            <MapUnion<MapSelf> as LatticeFrom<MapUnion<MapOther>>>
            <MapUnionWithTombstones<MapSelf, TombstoneSetSelf> as LatticeFrom<MapUnionWithTombstones<MapOther, TombstoneSetOther>>>
            <Max<T> as LatticeFrom<Max<T>>>
            <Min<T> as LatticeFrom<Min<T>>>
            <NotALattice as LatticeFrom<NotALattice>>
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `Lattice` (in Nightly builds, run with -Z macro-backtrace for more info)
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
  |
1 + #![feature(trivial_bounds)]
  |
